--- a/advertisements/templates/app_advertisements/index.html
+++ b/advertisements/templates/app_advertisements/index.html
@@ -141,24 +141,24 @@
 <!--            <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">-->
 <!--          </a>-->
 <!--        </div>-->
-<!--&lt;!&ndash;        <div class="col-md-8">&ndash;&gt;-->
-<!--&lt;!&ndash;          <div class="card-body">&ndash;&gt;-->
-<!--&lt;!&ndash;            <h5 class="card-title">&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="{{ adv.get_absolute_url }}" class="nav-link"><strong>Продам гараж</strong></a>&ndash;&gt;-->
-<!--&lt;!&ndash;            </h5>&ndash;&gt;-->
-<!--&lt;!&ndash;            <a href="{{ adv.get_absolute_url }}" class="nav-link">&ndash;&gt;-->
-<!--&lt;!&ndash;              <p class="card-text">&ndash;&gt;-->
-<!--&lt;!&ndash;                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nulla eos neque dolorum quis aliquid&ndash;&gt;-->
-<!--&lt;!&ndash;                deleniti molestias, nobis debitis expedita, fugiat ea. Delectus harum quo dolores modi cupiditate in&ndash;&gt;-->
-<!--&lt;!&ndash;                tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quis similique quas&ndash;&gt;-->
-<!--&lt;!&ndash;                architecto doloremque culpa consequatur excepturi provident quo fugit repudiandae inventore quae ea&ndash;&gt;-->
-<!--&lt;!&ndash;                sequi, recusandae aliquid veritatis rerum quibusdam?&ndash;&gt;-->
-<!--&lt;!&ndash;              </p>&ndash;&gt;-->
-<!--&lt;!&ndash;              <span>Автор: Никнейм автора объявления</span>&ndash;&gt;-->
-<!--&lt;!&ndash;              <p class="card-text"><small class="text-muted">Размещено: здесь должна стоять дата</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;            </a>&ndash;&gt;-->
-<!--&lt;!&ndash;          </div>&ndash;&gt;-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--        <div class="col-md-8">-->
+<!--          <div class="card-body">-->
+<!--            <h5 class="card-title">-->
+<!--              <a href="{{ adv.get_absolute_url }}" class="nav-link"><strong>Продам гараж</strong></a>-->
+<!--            </h5>-->
+<!--            <a href="{{ adv.get_absolute_url }}" class="nav-link">-->
+<!--              <p class="card-text">-->
+<!--                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nulla eos neque dolorum quis aliquid-->
+<!--                deleniti molestias, nobis debitis expedita, fugiat ea. Delectus harum quo dolores modi cupiditate in-->
+<!--                tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quis similique quas-->
+<!--                architecto doloremque culpa consequatur excepturi provident quo fugit repudiandae inventore quae ea-->
+<!--                sequi, recusandae aliquid veritatis rerum quibusdam?-->
+<!--              </p>-->
+<!--              <span>Автор: Никнейм автора объявления</span>-->
+<!--              <p class="card-text"><small class="text-muted">Размещено: здесь должна стоять дата</small></p>-->
+<!--            </a>-->
+<!--          </div>-->
+<!--        </div>-->
 <!--      </div>-->
 <!--    </div>-->
 <!--    <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">-->
